# ReClaw

./: .gitignore  CONTRIBUTING.md  docker-compose.gpu.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/agents/: custom_worker.py  devops_agent.py  orchestrator.py  user_sim_agent.py  ux_eval_agent.py
backend/app/api/: websocket.py
backend/app/api/routes/: agents.py  chat.py  codebooks.py  context_dag.py  files.py  memory.py  settings.py  skills.py
backend/app/core/: agent.py  agent_identity.py  agent_memory.py  context_dag.py  context_hierarchy.py  context_summarizer.py  context_tools.py  embedding_cache.py  embeddings.py  file_processor.py  file_watcher.py  keyword_index.py  lmstudio.py  ollama.py  prompt_compressor.py  prompt_rag.py  rag.py  resource_governor.py  self_evolution.py  vector_health.py
backend/app/models/: __init__.py  codebook.py  context_dag.py  database.py  project.py
backend/app/skills/: base.py  intercoder.py  registry.py  skill_factory.py  skill_loader.py
backend/app/skills/definitions/: ab-test-analysis.json  accessibility-audit.json  affinity-mapping.json  analytics-review.json  card-sorting.json  cognitive-walkthrough.json  competitive-analysis.json  concept-testing.json  contextual-inquiry.json  design-critique.json  design-system-audit.json  desk-research.json  diary-studies.json  empathy-mapping.json  field-studies.json  handoff-documentation.json  heuristic-evaluation.json  hmw-statements.json  interview-question-generator.json  (+24 more)
(+131 files in other folders)
